apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/custom-request-headers: "X-Forwarded-Proto:https"
spec:
  tls:
    - hosts:
        - photos.kblab.me
      secretName: immich-tls
  rules:
    - host: photos.kblab.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 80
